--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/site.css" />
 </head>
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">Loading... Bravo</div>
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
