--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link href="_content/BlazorPro.Spinkit/spinkit.min.css" rel="stylesheet" />-->
 
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="file-download.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </body>
