--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cronus Dashboard</title>
     <base href="/" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="site.css" rel="stylesheet" />
 </head>
 <body>
     <app>
